# ai-act-navigator

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  article_scraper.py  docker-compose.yml  generate_graph.py  id_generator.py  main.py  package-lock.json  package.json  pyproject.toml  schema_description.py  scrape_all.py
agent/: memory.py  ollama_agent.py
frontend/static/: final.css
frontend/templates/: chat.html  explain.html
tools/: graph_traversal.py  node_retrieval.py  single_node_retriever.py  subgraph.py
utils/: utils.py
